ZEsarUX 12 - Bubble Bobble edition. 16 January 2025

* New things added:

Added ZX Microdrive emulation on ZX Spectrum: that includes:
- Standard MDR emulation. Allow to browse inside MDR files, see file map, fragmentation, rename files, sectors info, chkdsk and emulate bad sectors
- Raw microdrive emulation. Supporting other non-interface1 rom file formats, like extending microdrive space with Multiface 128 or CP/M for LEC memory. Allow to see microdrive raw map (gap zones, sync bytes, data) and have "real problems", like autogenerate bad sectors or stretching the microdrive when it's new.
- Simulate data sound on read and write
- Visual Microdrive: Allow to see a microdrive cartridge in action

Added Visual Cassette Tape window
Added LEC memory extension emulation
Added machines Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
Added Memory Cheat feature: useful to find counters of energy, bombs, ammo or any other cheat in a game
Added Find text string on memory menu
Added Quicksave screen function
Added setting to disable persistent writes on Z88 Cards
Added CPC Additional ROMS emulation
Added setting "--simplemenus" to have a very simple main menu

* Improvements:

Allow save screen to bmp for most machines
Allow hotswap to Pentagon and to Spectrum +3
Allow hotswap from Spectrum 128 to Spectrum +3
Allow to load .SP snapshots of 64kb (like Shadow of Unicorn)
Improve Azimuth warning on External Audio Source Window
Added SDHC cards addressing support
Added Flash Color mode (128 colors)
Allow to not save snapshot when exiting ZEsarUX
Allow to load an additional config file .zesaruxdevrc
Allow to define Left Alt, Left Ctrl, Left Shift or TAB as Joystick Fire action
Allow to change current tape read position on Input Tape Viewer for .tap files
Allow loading a 8kb rom in ZX80 (for example the ZX81 rom, like an upgraded ZX80 to ZX81)
Allow magnify sprites on View Sprites
Added Sphere Meter Type to View Sensors