@@ -1,3 +1,15 @@
+ZEsarUX 12.1 - xxx edition. 22 Enero 2025
+
+
+* Mejoras
+
+Mejorado ZX Vision:
+- Permitir ocultar ventanas minimizadas
+
+
+----
+
+
 ZEsarUX 12 - Bubble Bobble edition. 16 Enero 2025
 
 * Cosas nuevas agregadas:
