@@ -1,3 +1,15 @@
+ZEsarUX 12.1 - xxx edition. 22 January 2025
+
+
+* Improvements
+
+Improved ZX Vision:
+- Allow to hide minimized windows
+
+
+----
+
+
 ZEsarUX 12 - Bubble Bobble edition. 16 January 2025
 
 * New things added:
